#Nmap Changelog ($Id$); -*-text-*-

o [NSE][GH#2237] Prevent the ssl-* NSE scripts from probing ports that were
  excluded from version scan, usually 9100-9107, since JetDirect will print
  anything sent to these ports. [Daniel Miller]

o Nmap's retransmission limits were preventing some UDP payloads from being
  tried with -sU and -PU. Now, Nmap ensures each payload for a particular port
  is sent at least once, unless --max-retries prevents it. [Daniel Miller]

o [GH#2206] Nmap no longer produces cryptic message "Failed to convert
  source address to presentation format" when unable to find useable route
  to the target. [nnposter]

o [Ncat][GH#2202] Use safety-checked versions of FD_* macros to abort early if
  number of connections exceeds FD_SETSIZE. [Pavel Zhukov]

o Nmap will now output a list of port numbers for each "ignored" state in the
  "extrareasons" element in XML output. The "All X ports" and "Not shown:" lines
  in normal output have been changed slightly to provide more detail. [Daniel Miller]

o New script port-states will print a list of ports that were found in each
  state, including states that were summarized as "Not shown: X closed ports"
  [Daniel Miller]

o New Nmap option --unique will prevent Nmap from scanning the same IP address
  twice, which can happen when different names resolve to the same address. [Daniel Miller]

o [NSE][GH#2175] Fixed NSE so it will not consolidate all port script output
  for targets which share an IP (e.g. HTTP vhosts) under one target. [Daniel Miller]

o [Zenmap][GH#2157] Fixed an issue where a failure to execute Nmap would result
  in a Zenmap crash with "TypeError: coercing to Unicode" exception.

o Nmap no longer considers an ICMP Host Unreachable as confirmation that a
  target is down, in accordance with RFC 1122 which says these errors may be
  transient. Instead, the probe will be destroyed and other probes used to
  determine aliveness. [Daniel Miller]
